Replication Framework/services_creators/yamls-to-apply/redis-cart-apply/redis-cart-netpol-1-cartservice-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-cart-1-allow-cartservice-1
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cartservice-1
    ports:
    - port: 6379
  podSelector:
    matchLabels:
      app: redis-cart-1
